--- a/versuche/glal4/lichtgeschwindigkeit/sections/diskussion.tex
+++ b/versuche/glal4/lichtgeschwindigkeit/sections/diskussion.tex
@@ -82,3 +82,7 @@ Die Resultate mit  und  ohne  Kalibration  wurden  absichtlich  nicht  auch noch
 gewichtet  gemittelt.  Dies  w\"ahre sinnlos, weil sie von  einander  abh\"angig
 sind, und es w\"urde den ``wahren Wert'' nur verf\"alschen.
 
+Die Messungen mit Kalibration sind n\"aher am Literaturwert als  die Messungen
+ohne  Kalibration.  Die Kalibration erlaubt  also  ein  genaueres  Messen  der
+Lichtgeschwindigkeit.
+
