--- a/versuche/glal4/lichtquanten/preamble/packages.tex
+++ b/versuche/glal4/lichtquanten/preamble/packages.tex
@@ -4,6 +4,7 @@
 \usepackage{booktabs,caption,fixltx2e}
 \usepackage[flushleft]{threeparttable}
 \usepackage{float}
+\usepackage{wrapfig}
 \usepackage{amsmath}
 \usepackage[backend=bibtex,citestyle=verbose-ibid,bibstyle=numeric,sorting=nyt]{biblatex}
 \usepackage[toc,page]{appendix}
