--- a/versuche/glal4/lichtquanten/sections/arbeitsgrundlagen.tex
+++ b/versuche/glal4/lichtquanten/sections/arbeitsgrundlagen.tex
@@ -1,3 +1,171 @@
 \section{Arbeitsgrundlagen}
 
+Die Ausbreitung von Licht und deren Wechselwirkung mit  materiellen  K\"orpern
+kann in zwei Bereichen aufgeteilt werden.
+
+
+\subsection{Wellentheorie der Elektromagnetischen Strahlung}
+
+Licht wird als elektromagnetische  Welle  modelliert,  darstellbar  durch eine
+kontinuierliche Wellenfunktion,  zum  Beispiel  $\vec{E}(\vec{r},t)$ f\"ur die
+elektrische Feldst\"arke.
+
+Zu  dieser  Aufgabe  relevante  charakteristische  Gr\"ossen  sind  dabei  die
+Wellenl\"ange  $\lambda$  und  die  Frequenz  $f$, wobei sich  die  Welle  mit
+Lichtgeschwindigkeit $c$ ausbreitet.
+
+\begin{equation}
+    \lambda \cdot f = c
+\end{equation}
+
+
+\subsection{Quantentheorie der elektromagnetischen Strahlung}
+
+Licht  wird  als  ein  Strom  von  Photonen $\gamma$ interpretiert, welche  in
+\textbf{individuellen Quantenprozessen} mit  einzelnen  Atomen, Elektronen und
+so weiter  in  wechselwirkung treten. Diese unterliegt dem Zufall, weshalb nur
+\textbf{Wahrscheinlichkeitsaussagen} gemacht werden k\"onnen.
+
+Zu dieser Aufgabe relevante charakteristische Gr\"ossen sind dabei die Energie
+$E_{\gamma}$ und die Plank'sche Konstante  $h$  (welches wir in diesem Versuch
+bestimmen werden).
+
+\begin{equation}
+    E_{\gamma} = h \cdot f = \frac{h \cdot c}{\lambda}
+\end{equation}
+
+
+\subsection{Der Photoeffekt}
+
+Beim Photoeffekt  handelt  es  sich  um  die Absorption von Lichtquanten durch
+Atome, Mole\"ule, Festk\"orper, bei der  das  Photon verschwindet und ein Teil
+seiner  Energie  auf  ein  Elektron  \"ubertragen  wird.  Im Falle von Atomen,
+Mole\"ulen  enstehen  im  ersten Momen freie Elektronen mit kinetische Energie
+$E_k = E_{\gamma} -  E_B$  (Die  am  Prozess  beteiligten  Atome  sind so viel
+schwerer, dass ihre Energie vernachl\"assigt werden kann), welche sich dann an
+andere  Teilchen  anlagern   k\"onnen.   $E_B$  ist  die  Bindungsenergie  des
+Elektrons.  Im Falle der Wechselwirkung mit Festk\"orpern wird  unterschieden:
+
+
+\subsubsection{\"Ausserer Photoeffekt}
+
+Die Lichtquanten ``schlagen'' aus der Oberfl\"ache von  Metallen, Metalloxiden
+und  Halbleitern  Photoelektronen  heraus. Zur Befreiung eines Elektrons  muss
+dessen  Bindungsenergie  aufgewendet  werden,  man  bezeichnet  sie  hier  als
+Austrittsarbeit  $W_a$.  Es ist klar, dass  die  Photonenenergie  $E_{\gamma}$
+mindestens  gleich  $W_a$  sein muss, damit der Effekt eintritt.  Der  Prozess
+spielt   sich   in   einer   d\"unnen  Oberfl\"achenschicht  ab,  welche   der
+Eindringtiefe der Photonen entspricht1) . Deshalb erleiden die Photoelektronen
+vor dem Austritt durch Wechselwirkung  mit dem Kristallgitter unterschiedliche
+Energieverluste und verlassen die Oberfl\"ache mit variabler  kinet.  Energie.
+Der Maximalwert ist gegeben durch die Gleichung:
+
+\begin{equation}
+    E_k = E_{\gamma} - W_a = h \cdot f - W_a
+\end{equation}
+
+welche erstmals von  \textit{Einstein}  formuliert  wurde. Die Austrittsarbeit
+ist   eine   Oberfl\"acheneigenschaft   und   nur   bei   gr\"osster  Reinheit
+materialspezifisch.   Adsorbierte  Gase,  Oxidfilme  und  andere   Fremdstoffe
+k\"onnen den  Wert erheblich ver\"andern. Schichten, welche zur Umwandlung von
+Strahlung  in   einen   Photoelektronenstrom   dienen,   bezeichnet   man  als
+Photokathoden; wird eine solche  mit  einem  Sekund\"arelektronenvervielfacher
+(engl. \textit{Multiplier}) kombiniert,  erh\"alt  man  einen Photomultiplier,
+den empfindlichsten Strahlungsdetektor.
+
+
+\subsubsection{Innerer Photoeffekt}
+
+Die in einen  Halbleiter  eindringenden Lichtquanten produzieren zus\"atzliche
+Ladungstr\"ager, wir unterscheiden:
+
+Photoleiter     (Photowiderst\"ande):     bei    Bestrahlung     nimmt     die
+Ladungstr\"agerdichte und damit die Leitf\"ahigkeit zu. Beispiele sind: CdS im
+Sichtbaren, InAs und InSb im nahen IR, dotiertes Ge bis ins  ferne  IR.  Wegen
+ihrer  Einfachheit  werden  solche  Elemente  f\"ur  zahlreiche   Messaufgaben
+eingesetzt.   Photodioden:  im  Bereich  des  p-n-\"Uberganges  erzeugen   die
+absorbierten Photonen Elektron-Loch- Paare, welche im  elektrischen  Feld  der
+Raumladungszone  getrennt  werden. Ohne  \"aussere  Quelle  wird  die  p-Seite
+positiv und  die  n-Seite  negativ aufgeladen, es entsteht eine Photospannung,
+die  maximal entgegengesetzt gleich der Diffusionsspannung $U_d$ werden  kann.
+Bei Belastung  fliesst ein entsprechender Strom ( Elementbetrieb) zum Beispiel
+bei Solarzellen. Wird eine \"aussere Spannung  in  Sperrrichtung  angelegt, so
+fliesst  in  dieser  Richtung  ein Photostrom,  der  streng  proportional  zur
+auftreffenden  Strahlungsleistung   ist  (  Diodenbetrieb),  angewendet  f\"ur
+Photodetektoren.  Diese   Vorg\"ange  laufen  nat\"urlich  nur  ab,  wenn  die
+Photonenenergie  einen  materialspezifischen  Schwellenwert   \"uberschreitet,
+welcher  der  Freisetzung  eines  ans   Kristallgitter   gebundenen  Elektrons
+entspricht.  In  eigenleitendem Material ist der energetische Abstand zwischen
+Leitungs-  und  Valenzband = Breite der Bandl\"ucke (engl. \textit{gap}) $E_g$
+massgebend.  Dies  ergibt  die  langwellige Grenze  der  Photoempfindlichkeit.
+
+
+\subsection{Bestimmung der Plank'schen Konstante h}
+
+Elektronen  in  der  Photokathode  absorbieren  die  Energie  $h\cdot\nu$  der
+einfallenden Photonen. Ist  ihre  Energie anschließend hoch genug, so k\"onnen
+sie  das  Metall  verlassen  und  fuhren so zu einer positiven  Aufladung  der
+beleuchteten Elektrode. Die Elektronen haben nach  dem  Verlassen  der Kathode
+eine gewisse  maximale  kinetische  Energie $E_{kin}$, die aber nicht ganz der
+Energie  der absorbierten Photonen entspricht, sondern  etwas  niedriger  ist.
+Dies  liegt  daran,  dass  beim  Austritt  aus  jedem  Material die sogenannte
+Austrittsarbeit $W_A$  aufgebracht werden muss, bzw. beim Eintritt wieder frei
+wird. Es gilt die Gleichung:
+
+\begin{equation}
+    E_{kin} = \frac{1}{2}m_e v^2 = h\cdot\nu - W_{A,Kathode}
+\end{equation}
+
+Die  Messung  der  maximalen  kinetischen  Energie  der  Elektronen  kann  auf
+verschiedene    Arten   erfolgen.   Denkbar   w\"are    zum    Beispiel    die
+Fluggeschwindigkeit  direkt  zu   bestimmen.  Allerdings  w\"are  ein  daf\"ur
+geeigneter  Aufbau  sehr aufw\"andig. Einfacher ist es, zwischen  Kathode  und
+Anode eine  Gegenspannung anzulegen, die gerade so eingestellt wird, dass auch
+die  schnellsten  Elektronen  die  Anode  gerade  nicht  mehr  erreichen.  Der
+(relativ) einfach messbare  Photostrom  wird  fur  diesen  Wert $U_{max}$ dann
+gerade null. $U_{max}\cdot e$ entspricht bis  auf  einen  konstanten Summanden
+der kinetischen Energie $E_{kin}$. Die Konstante kommt daher, dass nat\"urlich
+nicht nur die Kathode, sondern auch die Anode eine Austrittsarbeit hat. Da die
+beiden Elektroden \"uber das Messger\"at  verbunden  sind,  muss auch noch die
+Kontaktspannung    berucksichtigt   werden,   so   dass   schließlich    gilt:
+
+\begin{align}
+    U_{max}(\nu)\cdot e &= E_{kin} - U_{Kontakt} \cdot e \\
+                        &= \left(h\cdot\nu - W_{A,Kathode}\right) - \left(W_{A,Anode}-W_{A,Kathode}\right) \\
+                        &= h\cdot\nu - W_{A,Anode}
+    \label{eq:umax}
+\end{align}
+
+Die Austrittsarbeit der Kathode spielt f\"ur den Wert  der  Gegenspannung also
+tats\"achlich keine Rolle. Ihre Gr\"osse entscheidet aber nat\"urlich trotzdem
+dar\"uber,  ob  \"uberhaupt  Photoelektronen emittiert werden k\"onnen und wie
+hoch  deren kinetische Energie ist. Die Austrittsarbeiten h\"angen  nicht  von
+der  Frequenz  des  eingestrahlten Lichtes ab. Deshalb kann man auch ohne ihre
+Kenntnis  mit  Hilfe  der  Gleichung  \ref{eq:umax}  aus  zwei  Messungen  von
+$U_max(\nu)$  f\"ur  verschiedene  Lichtfrequenzen  $\nu_1$  und $\nu_2$ durch
+Differenzbildung die Konstante $h$ bestimmen:
+
+\begin{equation}
+    h = \frac{e\cdot\left(U_{max}(\nu_2) - U_{max}(\nu_1)\right)}{\nu_2 - \nu_1}
+\end{equation}
+
+Oder, falls mehrere Messdaten vorhanden sind, kann mittels linearer Regression
+die Konstante $h$ auch anhand der Steigung berechnet werden:
+
+\begin{equation}
+    h = e \cdot m
+    \label{eq:h}
+\end{equation}
+
+Wobei $m$ die Steigung des Fits der Funktion  $U_{max}(\nu)  =  m\cdot\nu + q$
+ist.
+
+Die  Tatsache,  dass  zwar  die  Anzahl, jedoch (zumindest fur  konventionelle
+Lichtquellen)   nicht   die   Energie  der  austretenden  Elektronen  von  der
+Intensit\"at  der   Strahlung   abh\"angt,   f\"uhrte   um   1900  zu  grossen
+Erkl\"arungsschwierigkeiten im Rahmen der allgemein akzeptierten Wellentheorie
+des Lichtes. Die Beobachtung, dass die Farbe, und damit die Wellenl\"ange bzw.
+Frequenz, die Energie der Elektronen bestimmte, war v\"ollig unverst\"andlich.
+Die Probleme konnten erst durch die im Jahr 1905 von  Einstein  vorgeschlagene
+quantenmechanische Deutung des Photoeffektes beseitigt werden.
 
