--- a/versuche/glal4/lichtquanten/sections/fehlerrechnung.tex
+++ b/versuche/glal4/lichtquanten/sections/fehlerrechnung.tex
@@ -1,2 +1,11 @@
 \section{Fehlerrechnung}
 
+Mit  der  Steigung  kann  nun mit der  Formel  \ref{eq:h}  der  Konstante  $h$
+berechnet werden:
+
+\begin{align*}
+    \overline{h_{ph}} = m_{ph} \cdot e &= 7.619679638499265e-22 \\
+    h_0 = m_0 \cdot e       &= 7.29847526956128e-22 \\
+\end{align*}
+
+
