Adding rtGL bericht

--- a/versuche/rtGL/labor2/sections/theory.tex
+++ b/versuche/rtGL/labor2/sections/theory.tex
@@ -1,3 +1,11 @@
 \section{Theory}
 
+The  risk  of  instability in control circuits are caused by the delays. It is
+always  necessary to ensure that a system is stable. There exist  some  simple
+tuning rules (proposed by Ziegler-Nichols and Chien, Hrones and Reswick)  that
+allow us to calculate stable  parameters  for  P,  PI,  and  PID  controllers.
+
+\input{sections/theory/system_characterisation}
+\input{sections/theory/ziegler_nichols}
+\input{sections/theory/chien_hrones_reswick}
 
