--- a/versuche/rtGL/labor2/preamble/packages.tex
+++ b/versuche/rtGL/labor2/preamble/packages.tex
@@ -4,11 +4,13 @@
 \usepackage{lipsum}
 \usepackage{titling}       % Abstract on titlepage
 \usepackage{changepage}    % Change width of abstract text
+\usepackage{makecell}      % newlines in table cells
 \usepackage{float}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{mathrsfs}
-\usepackage{todonotes}
+\usepackage[flushleft]{threeparttable}
+\usepackage{booktabs}  % Required for \toprule, \midrule, \bottomrule
 \usepackage[backend=bibtex,bibstyle=numeric,sorting=nyt]{biblatex}
 \usepackage[toc,page]{appendix}
 \usepackage{siunitx}
@@ -34,3 +36,5 @@
 % Laplace L
 \DeclareMathOperator{\laplace}{\mathscr{L}}
 
+% Global relative size for all figures
+\newcommand{\imagewidth}{.9\linewidth}
