--- a/versuche/rtGL/labor2/rtGL_bericht_2.tex
+++ b/versuche/rtGL/labor2/rtGL_bericht_2.tex
@@ -7,7 +7,7 @@
 
 \begin{document}
     \maketitle
-    \input{sections/abstract}
+    %\input{sections/abstract}
     \newpage
 
     \tableofcontents
@@ -16,14 +16,17 @@
     \input{util/matlabcode}
     \input{sections/introduction}
     \input{sections/theory}
-    \input{sections/simulations}
-    \input{sections/results}
-    \input{sections/discussion}
+    \newpage\input{sections/measurements}
+    \newpage\input{sections/simulations}
+    \newpage\input{sections/discussion}
 
     \addcontentsline{toc}{section}{Literature}
-    %\newpage\printbibliography
+    \newpage\printbibliography
 
-    \clearpage\onecolumn\appendix
-    \input{sections/appendix.tex}
+    \clearpage
+    \onecolumn
+
+    %\appendix
+    %\input{sections/appendix.tex}
 \end{document}
 
