--- a/versuche/rtGL/labor2/sections/simulations.tex
+++ b/versuche/rtGL/labor2/sections/simulations.tex
@@ -1,28 +1,8 @@
 \section{Simulations}
 
-\begin{figure}
-    \centering
-    \includegraphics[width=\linewidth]{images/static_cc}
-    \caption{XXX}
-\end{figure}
+\input{sections/simulations/characterisation}
+\newpage\input{sections/simulations/identification_Tt_PT1}
+\newpage\input{sections/simulations/identification_hudzovic}
+\newpage\input{sections/simulations/controllers_Tt_PT1}
+\input{sections/simulations/tracking}
 
-\begin{figure*}
-    \centering
-    \includegraphics[width=\linewidth]{images/step_response}
-    \caption{XXX}
-\end{figure*}
-
-\begin{figure}
-    \centering
-    \includegraphics[width=\linewidth]{images/hudzovic}
-    \caption{XXX}
-\end{figure}
-
-\begin{equation}
-    G(s) = \frac{K_s \cdot \Delta V}{1.159 s^2 + 5.365 s + 1}
-\end{equation}
-
-\begin{align}
-    T_u  &= 0.1655 \\
-    T_g  &= 5.9602
-\end{align}
